[package]
name = "valico-rs-wasm"
version = "0.1.2"
authors = ["Lars Hvam"]
edition = "2018"
rust-version = "1.76"
homepage = "https://github.com/abap-wasm/valico-rs-wasm"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
valico = { version = "4.0.0", features = ["js"] }
serde_json = "1.0.114"